--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    border: solid 1px black;
+    margin: 10px;
+}
+
 body { 
     background-color: black;
     background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 160%
@@ -7,3 +12,33 @@ body {
     color: white;
     font-family: monospace;
 };
+
+h1 {
+    font-size: x-large;
+}
+
+p {
+    font-size: x-large;
+}
+
+button {
+    background-color: black;
+    background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 160%
+    );
+    text-shadow: 0 0 5px #C8C8C8;
+    color: white;
+    font-family: monospace;
+    font-size: x-large;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#score {
+    display: flex;
+    justify-content: space-between;
+    
+}
