--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    border: solid 1px black;
+    /* border: solid 1px black; */
     margin: 10px;
 }
 
@@ -28,7 +28,7 @@ button {
     text-shadow: 0 0 5px #C8C8C8;
     color: white;
     font-family: monospace;
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 .content {
@@ -41,4 +41,8 @@ button {
     display: flex;
     justify-content: space-between;
     
+}
+
+.results {
+    font-size: 20px;
 }
