--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ body {
     text-shadow: 0 0 5px #C8C8C8;
     color: white;
     font-family: monospace;
-};
+}
 
 h1 {
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 p {
